[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemunited-quantities"
version = "0.0.2"
description = "Lab-aware physical quantity primitive for the chemunited ecosystem (wraps pint with chemistry-domain unit registry)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" },
]
requires-python = ">=3.11"
keywords = ["chemistry", "units", "pint", "laboratory", "automation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pint>=0.23",
    "pydantic-pint>=0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chemunited_quantities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["I"]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["chemunited_quantities"]

[tool.mypy]
explicit_package_bases = true
files = ["src/chemunited_quantities"]
ignore_missing_imports = true
mypy_path = "src"
no_implicit_reexport = true
pretty = true
python_version = "3.11"
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/chemunited_quantities"]
